--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
         }
     ],
     "routes":[
+        {
+            "src": "/datos",
+            "dest": "/"
+          },
         {"src":"/(.*)",
             "dest": "/"
     }
