--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.1",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "xlsx-populate": "^1.21.0"
   }
 }
