--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/kv": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "resend": "^3.2.0",
