--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "pg": "^8.11.3",
     "resend": "^3.2.0",
     "xlsx-populate": "^1.21.0"
   }
